--- a/index.html
+++ b/index.html
@@ -2,189 +2,104 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>С Днём Рождения!</title>
   <style>
-    html, body {
+    * {
       margin: 0;
       padding: 0;
-      background: linear-gradient(135deg, #ffe6f0, #ffffff);
-      font-family: 'Segoe UI', sans-serif;
-      overflow-x: hidden;
-      height: 100%;
-    }
-
-    .container {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      text-align: center;
-      padding: 20px;
       box-sizing: border-box;
-      width: 100%;
-      max-width: 600px;
     }
 
-    .start-button {
-      padding: 14px 28px;
-      background-color: #ff4d6d;
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to bottom right, #ffe6f0, #ffffff);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      overflow: hidden;
+      padding: 20px;
+    }
+
+    #container {
+      text-align: center;
+      max-width: 600px;
+      width: 100%;
+    }
+
+    button {
+      padding: 15px 30px;
+      background-color: #ff8aa3;
       color: white;
-      font-size: 18px;
       border: none;
       border-radius: 10px;
+      font-size: 18px;
       cursor: pointer;
-      box-shadow: 0 8px 15px rgba(255, 77, 109, 0.3);
-      transition: all 0.3s ease;
-      position: relative;
-      z-index: 2;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      transition: transform 0.2s, background-color 0.3s;
     }
 
-    .start-button:hover {
-      background-color: #ff3366;
-      transform: scale(1.05);
+    button:active {
+      transform: scale(0.95);
+      background-color: #ff6a8a;
     }
 
-    .message-box {
-      max-width: 100%;
+    #message {
+      display: none;
       margin-top: 30px;
       padding: 20px;
-      border: 2px solid #ffb6c1;
-      border-radius: 20px;
-      background: rgba(255, 255, 255, 0.95);
+      border: 2px dashed #ff8aa3;
+      border-radius: 15px;
+      background-color: rgba(255, 255, 255, 0.8);
       font-size: 16px;
+      color: #333;
       line-height: 1.6;
-      opacity: 0;
-      transform: translateY(20px);
-      transition: opacity 1s ease, transform 1s ease;
+      max-height: 80vh;
+      overflow-y: auto;
     }
 
-    .message-box.show {
-      opacity: 1;
-      transform: translateY(0);
-    }
-
-    .heart {
-      position: relative;
-      width: 40px;
-      height: 36px;
-      margin: 30px auto 0;
-      transform: rotate(-45deg);
-      opacity: 0;
-      transition: opacity 1s ease;
-    }
-
-    .heart::before,
-    .heart::after {
-      content: "";
-      position: absolute;
-      width: 40px;
-      height: 36px;
-      background: red;
-      border-radius: 50%;
-    }
-
-    .heart::before {
-      top: 0;
-      left: 20px;
-    }
-
-    .heart::after {
-      top: -20px;
-      left: 0;
-    }
-
-    .heart {
-      background: red;
-      animation: heartPulse 1.5s infinite;
-    }
-
-    .heart.show {
-      opacity: 1;
-    }
-
-    @keyframes heartPulse {
-      0%, 100% { transform: rotate(-45deg) scale(1); }
-      50% { transform: rotate(-45deg) scale(1.2); }
-    }
-
-    .ripple {
-      position: absolute;
-      border-radius: 50%;
-      transform: scale(0);
-      animation: ripple-effect 0.6s linear;
-      background-color: rgba(255, 77, 109, 0.5);
-      z-index: 0;
-    }
-
-    @keyframes ripple-effect {
-      to {
-        transform: scale(15);
-        opacity: 0;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .start-button {
+    @media (max-width: 600px) {
+      button {
         font-size: 16px;
         padding: 12px 24px;
       }
-      .message-box {
+
+      #message {
         font-size: 15px;
       }
     }
   </style>
 </head>
 <body>
-
-<div class="container">
-  <button class="start-button" id="startBtn" onclick="showMessage(event)">Твой день!</button>
-
-  <div class="message-box" id="message">
-    С днём рождения, мое маленькое солнышко!<br><br>
-    В этот особенный день хочу пожелать тебе самого главного — настоящего счастья.
-    Пусть каждый день приносит тебе радость, вдохновение и уверенность в том, что ты идёшь по своему пути.
-    Ты заслуживаешь только самого лучшего — любви, тепла, поддержки и много-много поводов для улыбок.<br><br>
-    Спасибо тебе за всё.
-    За то, что ты всегда рядом — и в радости, и в трудные моменты.
-    За твою доброту, терпение, за умение слушать и быть рядом, когда это особенно важно.
-    Ты — человек, с которым легко, светло и спокойно. И я очень это ценю.<br><br>
-    Пусть жизнь дарит тебе яркие события, верных людей рядом, удачу во всех делах
-    и внутреннюю гармонию, которая греет изнутри.
-    Пусть сбудется всё, о чём ты мечтаешь — даже то, о чём не говоришь вслух.<br><br>
-    Ты умеешь быть сильной, но я желаю, чтобы тебе не приходилось быть такой слишком часто.
-    Пусть рядом всегда будут те, кто поддержит, обнимет и скажет: "Я с тобой".<br><br>
-    С праздником тебя, коть!
-    Пусть впереди будет много светлых дней и приятных сюрпризов.
+  <div id="container">
+    <button id="showBtn">Твой день!</button>
+    <div id="message">
+      <p>С днём рождения, мое маленькое солнышко!<br><br>
+      В этот особенный день хочу пожелать тебе самого главного — настоящего счастья.
+      Пусть каждый день приносит тебе радость, вдохновение и уверенность в том, что ты идёшь по своему пути.
+      Ты заслуживаешь только самого лучшего — любви, тепла, поддержки и много-много поводов для улыбок.<br><br>
+      Спасибо тебе за всё. За то, что ты всегда рядом — и в радости, и в трудные моменты.
+      За твою доброту, терпение, за умение слушать и быть рядом, когда это особенно важно.
+      Ты — человек, с которым легко, светло и спокойно. И я очень это ценю.<br><br>
+      Пусть жизнь дарит тебе яркие события, верных людей рядом, удачу во всех делах
+      и внутреннюю гармонию, которая греет изнутри.
+      Пусть сбудется всё, о чём ты мечтаешь — даже то, о чём не говоришь вслух.<br><br>
+      Ты умеешь быть сильной, но я желаю, чтобы тебе не приходилось быть такой слишком часто.
+      Пусть рядом всегда будут те, кто поддержит, обнимет и скажет: "Я с тобой".<br><br>
+      С праздником тебя, коть!<br>
+      Пусть впереди будет много светлых дней и приятных сюрпризов.</p>
+    </div>
   </div>
 
-  <div class="heart" id="heart"></div>
-</div>
+  <script>
+    const btn = document.getElementById('showBtn');
+    const msg = document.getElementById('message');
 
-<script>
-  function showMessage(e) {
-    const btn = document.getElementById('startBtn');
-    const message = document.getElementById('message');
-    const heart = document.getElementById('heart');
-
-    const rect = btn.getBoundingClientRect();
-    const ripple = document.createElement("span");
-    ripple.className = "ripple";
-    ripple.style.left = `${e.clientX - rect.left}px`;
-    ripple.style.top = `${e.clientY - rect.top}px`;
-    btn.appendChild(ripple);
-
-    setTimeout(() => ripple.remove(), 600);
-
-    btn.disabled = true;
-
-    setTimeout(() => {
+    btn.addEventListener('click', () => {
       btn.style.display = 'none';
-      message.classList.add('show');
-      heart.classList.add('show');
-    }, 400);
-  }
-</script>
-
+      msg.style.display = 'block';
+    });
+  </script>
 </body>
 </html>
