--- a/index.html
+++ b/index.html
@@ -15,17 +15,20 @@
       font-family: 'Segoe UI', sans-serif;
       background: linear-gradient(to bottom right, #ffe6f0, #ffffff);
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
       padding: 20px;
       overflow: hidden;
+      position: relative;
     }
 
     #container {
       text-align: center;
       max-width: 600px;
       width: 100%;
+      z-index: 1;
     }
 
     button {
@@ -103,6 +106,17 @@
       100% { transform: scale(1) rotate(-45deg); }
     }
 
+    #watermark {
+      position: absolute;
+      bottom: 10px;
+      width: 100%;
+      text-align: center;
+      font-size: 12px;
+      color: rgba(0, 0, 0, 0.3);
+      z-index: 0;
+      pointer-events: none;
+    }
+
     @media (max-width: 600px) {
       button {
         font-size: 16px;
@@ -138,6 +152,8 @@
       <div class="heart"></div>
     </div>
   </div>
+
+  <div id="watermark">created by @navelles</div>
 
   <script>
     const btn = document.getElementById('showBtn');
