--- a/index.html
+++ b/index.html
@@ -136,20 +136,18 @@
     <button id="showBtn">Твой день!</button>
     <div id="message">
       <p>
-        С днём рождения, мое маленькое солнышко!<br><br>
-        В этот особенный день хочу пожелать тебе самого главного — настоящего счастья.
-        Пусть каждый день приносит тебе радость, вдохновение и уверенность в том, что ты идёшь по своему пути.
-        Ты заслуживаешь только самого лучшего — любви, тепла, поддержки и много-много поводов для улыбок.<br><br>
-        Спасибо тебе за всё. За то, что ты всегда рядом — и в радости, и в трудные моменты.
-        За твою доброту, терпение, за умение слушать и быть рядом, когда это особенно важно.
-        Ты — человек, с которым легко, светло и спокойно. И я очень это ценю.<br><br>
-        Пусть жизнь дарит тебе яркие события, верных людей рядом, удачу во всех делах
-        и внутреннюю гармонию, которая греет изнутри.
-        Пусть сбудется всё, о чём ты мечтаешь — даже то, о чём не говоришь вслух.<br><br>
+       С днём рождения, Диана — моё солнце, моё чувство, моя нежность!<br><br>
+       В этот особенный день я хочу напомнить тебе, как бесконечно ты дорога мне. Ты — как утро после долгой ночи, как тихий свет, который греет изнутри. Я желаю тебе не просто счастья — я желаю тебе мягкого, глубокого, настоящего счастья, которое укрывает, как плед в прохладный вечер.
+
+Пусть каждый день приносит тебе вдохновение, улыбки и моменты, в которых ты чувствуешь: ты на своём месте, ты любима, ты ценна. Ты заслуживаешь самой тёплой любви, самых искренних слов и заботы, которая не нуждается в поводах.<br><br>
+       Спасибо тебе, Диана, за твою светлую душу. За то, что умеешь быть рядом, даже в молчании. За то, что слушаешь сердцем. За твою доброту, тонкость и то волшебство, что ты просто есть.
+
+Пусть твоя жизнь будет соткана из красивых мгновений, настоящих чувств, надёжных объятий и людей, которые не отпускают твою руку. Пусть сбываются мечты, даже самые сокровенные, те, что ты бережно прячешь внутри себя..<br><br>
+        Ты сильная, Диана. Но пусть рядом всегда будет кто-то, кто будет нежно напоминать: тебе не нужно быть сильной всё время. Ты можешь быть просто собой. И быть любимой..<br><br>
         Ты умеешь быть сильной, но я желаю, чтобы тебе не приходилось быть такой слишком часто.
-        Пусть рядом всегда будут те, кто поддержит, обнимет и скажет: "Я с тобой".<br><br>
-        С праздником тебя, коть!<br>
-        Пусть впереди будет много светлых дней и приятных сюрпризов.
+       С днём рождения, любимая.<br><br>
+        Пусть твой мир будет полон красоты, спокойствия и света — таким, каким ты делаешь мой.
+        
       </p>
       <div class="heart"></div>
     </div>
