--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
        Спасибо тебе, Диана, за твою светлую душу. За то, что умеешь быть рядом, даже в молчании. За то, что слушаешь сердцем. За твою доброту, тонкость и то волшебство, что ты просто есть.
 
 Пусть твоя жизнь будет соткана из красивых мгновений, настоящих чувств, надёжных объятий и людей, которые не отпускают твою руку. Пусть сбываются мечты, даже самые сокровенные, те, что ты бережно прячешь внутри себя..<br><br>
-        Ты сильная, Диана. Но пусть рядом всегда будет кто-то, кто будет нежно напоминать: тебе не нужно быть сильной всё время. Ты можешь быть просто собой. И быть любимой..<br><br>
+        Ты сильная. Но пусть рядом всегда будет кто-то, кто будет нежно напоминать: тебе не нужно быть сильной всё время. Ты можешь быть просто собой. И быть любимой..<br><br>
         Ты умеешь быть сильной, но я желаю, чтобы тебе не приходилось быть такой слишком часто.
        С днём рождения, любимая.<br><br>
         Пусть твой мир будет полон красоты, спокойствия и света — таким, каким ты делаешь мой.
