--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   </style>
 </head>
 <body>
-  <div id="watermark">created by @NAVELLESS</div>
+  <div id="watermark">created by @NAVELLESS @l_ONLY_LOVE_DIANA</div>
 
   <div id="container">
     <button id="showBtn">Твой день!</button>
